Home Page Changes

--- a/Tadekam.html
+++ b/Tadekam.html
@@ -229,18 +229,56 @@
 							</div>
 							<div class="col-xs-2 col-lg-2"></div>
 						</div>
+						<div class="row textRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								<a href="#OurFounderAboutTadekam" id="AboutTadekamMenu" onclick="menuSelected(event,this.id)">Read More</a>
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-12 col-lg-12 homeGurujiQuote">
-						<img src="images/quote.png" alt="Quote">
+						<div class="row headerOfContentRow">
+							<div class="col-xs-2 col-lg-2">
+								<img src="images/quote_left_flower.png" alt="Quote">
+							</div>
+							<div class="col-xs-8 col-lg-8 titleContentHeader">
+								<div class="row textRow">
+									“When you choose a Guru you become a follower.
+								</div>
+								<div class="row textRow">
+									When your Guru chooses you , then you become a disciple”.
+								</div>
+								<div class="row quoteName">
+									<div class="col-xs-12 col-lg-12">
+										- Guruji Naushir - 
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-2">
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-5 col-lg-5"></div>
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-2">
+								<img src="images/quote_right_flower.png" alt="Quote">
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-8 col-lg-8 backgroundHomeTadekamForYou">
+					<div class="col-xs-12 col-lg-12 backgroundHomeTadekamForYou">
 						<div class="row headerOfContentRow">
-							<div class="col-xs-1 col-lg-1"></div>
-							<div class="col-xs-11 col-lg-4 titleContentHeader homeTadekamForYouTitle">
+							<div class="col-xs-2 col-lg-1"></div>
+							<div class="col-xs-10 col-lg-7 titleContentHeader homeTadekamForYouTitle">
 								<div class="row">
 									<div class="col-xs-12 col-lg-12">
 										Tadekam For You
@@ -249,39 +287,72 @@
 								<div class="row">
 									<div class="col-xs-5 col-lg-5">
 										<div class="row">
-											<div class="col-xs-4 col-lg-4 titleContentBorder homeTadekamForYouBorder"></div>
+											<div class="col-xs-4 col-lg-2 titleContentBorder homeTadekamForYouBorder"></div>
 											<div class="col-xs-4 col-lg-4"></div>
 										</div>
 									</div>
 									<div class="col-xs-5 col-lg-5"></div>
 								</div>
+								<div class="row textRow homeTadekamForYouTextRow">
+									<div class="col-xs-10 col-lg-8">
+										<ul>
+											<li>Learn to master your circumstances rather than be a victim.</li>
+											<li>Learn to swim with the flow of life rather than against it. </li>
+											<li>Learn to seamlessly integrate your journey of self-discovery living a normal life.</li>
+											<li>Learn tools and techniques to transform your life towards health, success, confidence and happiness.</li>
+										</ul>
+									</div>
+								</div>
 							</div>
-							<div class="col-lg-4"></div>
-						</div>
-						<div class="row textRow homeTadekamForYouTextRow">
-							<div class="col-xs-1 col-lg-1"></div>
-							<div class="col-xs-8 col-lg-8">
-								Learn to master your circumstances rather than be a victim. Learn to swim with the flow of life rather than against it. 
+							<div class="col-xs-4 col-lg-4 homeTadekamForYouStones">
+								<img src="images/stones.png" alt="Stones" class="homeTadekamForYouStonesImage">
 							</div>
-							<div class="col-xs-2 col-lg-2"></div>
-						</div>
-						<div class="row textRow homeTadekamForYouTextRow">
-							<div class="col-xs-1 col-lg-1"></div>
-							<div class="col-xs-8 col-lg-8">
-								Learn to seamlessly integrate your journey of self-discovery living a normal life.
-							</div>
-							<div class="col-xs-2 col-lg-2"></div>
-						</div>
-						<div class="row textRow homeTadekamForYouTextRow">
-							<div class="col-xs-1 col-lg-1"></div>
-							<div class="col-xs-8 col-lg-8">
-								Learn tools and techniques to transform your life towards health, success, confidence and happiness.
-							</div>
-							<div class="col-xs-2 col-lg-2"></div>
 						</div>
 					</div>
-					<div class="col-xs-4 col-lg-4 homeTadekamForYouStones">
-						<img src="images/stones.png" alt="Stones" class="homeTadekamForYouStonesImage">
+				</div>
+				<div class="row">
+					<div class="backgroundHomePrograms">
+						<div class="row headerOfContentRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8 titleContentHeader">
+								Programs
+								<div class="row">
+									<div class="col-xs-5 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-2">
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-5 col-lg-5"></div>
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+								<img src="images/home_spiritual_programs.png" alt="Spiritual">
+							</div>
+							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+								<img src="images/home_programs_for_children.png" alt="Children">
+							</div>
+							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+								<img src="images/home_live_smart_seminars.png" alt="Seminars">
+							</div>
+							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+								<img src="images/home_programs_by_guruji_naushir.png" alt="Guruji">
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								<a href="#mainContentProgramsMenu" id="ProgramsMenu" onclick="menuSelected(event,this.id)">Explore</a>
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -291,7 +362,7 @@
 						<img src="images/banner_about_us.png" alt="Banner About Us">
 					</div>
 				</div>
-				<div class="row headerOfContentRow">
+				<div class="row headerOfContentRow" id="OurFounderAboutTadekam">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8 titleContentHeader">
 						<div class="row">
@@ -345,48 +416,50 @@
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
-				<div class="row headerOfContentRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8 titleContentHeader">
-						The Journey So Far...
-						<div class="row">
-							<div class="col-xs-5 col-lg-5"></div>
-							<div class="col-xs-2 col-lg-2">
-								<div class="row">
-									<div class="col-xs-2 col-lg-4"></div>
-									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-4"></div>
+				<div class="backgroundJourneySoFarAboutTadekam">
+					<div class="row headerOfContentRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8 titleContentHeader">
+							The Journey So Far...
+							<div class="row">
+								<div class="col-xs-5 col-lg-5"></div>
+								<div class="col-xs-2 col-lg-2">
+									<div class="row">
+										<div class="col-xs-2 col-lg-4"></div>
+										<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+										<div class="col-xs-2 col-lg-4"></div>
+									</div>
 								</div>
+								<div class="col-xs-5 col-lg-5"></div>
 							</div>
-							<div class="col-xs-5 col-lg-5"></div>
 						</div>
+						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						<div class="col-xs-2 col-lg-4"></div>
-						<div class="col-xs-8 col-lg-4 namePhotoHolder">
-							<img src="images/seema.jpg" alt="Seema" class="namePhoto">
+					<div class="row">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							<div class="col-xs-2 col-lg-4"></div>
+							<div class="col-xs-8 col-lg-4 namePhotoHolder">
+								<img src="images/seema.jpg" alt="Seema" class="namePhoto">
+							</div>
+							<div class="col-xs-2 col-lg-4"></div>
 						</div>
-						<div class="col-xs-2 col-lg-4"></div>
+						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row textRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						By Dr. Seema Khaire
+					<div class="row textRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							By Dr. Seema Khaire
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row textRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+					<div class="row textRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
 				</div>
 				<div class="row headerOfContentRow">
 					<div class="col-xs-2 col-lg-2"></div>
