--- a/Tadekam.html
+++ b/Tadekam.html
@@ -242,7 +242,7 @@
 					<div class="col-xs-12 col-lg-12 homeGurujiQuote">
 						<div class="row headerOfContentRow">
 							<div class="col-xs-2 col-lg-2">
-								<img src="images/quote_left_flower.png" alt="Quote">
+								<img src="images/quote_left_flower.png" alt="Quote" class="quoteImage">
 							</div>
 							<div class="col-xs-8 col-lg-8 titleContentHeader">
 								<div class="row textRow">
@@ -269,7 +269,7 @@
 								</div>
 							</div>
 							<div class="col-xs-2 col-lg-2">
-								<img src="images/quote_right_flower.png" alt="Quote">
+								<img src="images/quote_right_flower.png" alt="Quote" class="quoteImage">
 							</div>
 						</div>
 					</div>
@@ -304,7 +304,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-xs-4 col-lg-4 homeTadekamForYouStones">
+							<div class="col-xs-12 col-lg-4 homeTadekamForYouStones">
 								<img src="images/stones.png" alt="Stones" class="homeTadekamForYouStonesImage">
 							</div>
 						</div>
@@ -332,16 +332,18 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-2 col-lg-2"></div>
-							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_spiritual_programs.png" alt="Spiritual">
 							</div>
-							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_programs_for_children.png" alt="Children">
 							</div>
-							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+							<div class="col-xs-12 offsetExtraSmall"></div>
+							<div class="col-xs-2 offsetExtraSmall"></div>
+							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_live_smart_seminars.png" alt="Seminars">
 							</div>
-							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_programs_by_guruji_naushir.png" alt="Guruji">
 							</div>
 							<div class="col-xs-2 col-lg-2"></div>
