Program Mobile Changes

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 					<div class="col-xs-12 col-lg-12 homeGurujiQuote">
 						<div class="row headerOfContentRow">
 							<div class="col-xs-2 col-lg-2">
-								<img src="images/quote_left_flower.png" alt="Quote">
+								<img src="images/quote_left_flower.png" alt="Quote" class="quoteImage">
 							</div>
 							<div class="col-xs-8 col-lg-8 titleContentHeader">
 								<div class="row textRow">
@@ -269,7 +269,7 @@
 								</div>
 							</div>
 							<div class="col-xs-2 col-lg-2">
-								<img src="images/quote_right_flower.png" alt="Quote">
+								<img src="images/quote_right_flower.png" alt="Quote" class="quoteImage">
 							</div>
 						</div>
 					</div>
@@ -332,16 +332,18 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-2 col-lg-2"></div>
-							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_spiritual_programs.png" alt="Spiritual">
 							</div>
-							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_programs_for_children.png" alt="Children">
 							</div>
-							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+							<div class="col-xs-12 offsetExtraSmall"></div>
+							<div class="col-xs-2 offsetExtraSmall"></div>
+							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_live_smart_seminars.png" alt="Seminars">
 							</div>
-							<div class="col-xs-2 col-lg-2 homeProgramsImageHolder">
+							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_programs_by_guruji_naushir.png" alt="Guruji">
 							</div>
 							<div class="col-xs-2 col-lg-2"></div>
@@ -531,7 +533,7 @@
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
 						<div class="row">
-							<div class="col-xs-2 col-lg-4 programHolder">
+							<div class="col-xs-12 col-lg-4 programHolder">
 								<div class="row">
 								</div>
 								InConnect Workshop
@@ -544,7 +546,7 @@
 									<div class="col-xs-2 col-lg-4"></div>
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-4 programHolder">
+							<div class="col-xs-12 col-lg-4 programHolder">
 								Breaking Boundaries
 								<div class="row programShortDescription">
 									These two days courses having three levels have been carefully crafted, to unleash the spiritual potential and power that lies within every human beings and break free of physical and mental limitations.
@@ -555,7 +557,7 @@
 									<div class="col-xs-2 col-lg-4"></div>
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-4 programHolder">
+							<div class="col-xs-12 col-lg-4 programHolder">
 								Tadekam Kriyas
 								<div class="row">(Basic and Advance)</div>
 								<div class="row programShortDescription">
@@ -575,7 +577,7 @@
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
 						<div class="row">
-							<div class="col-xs-2 col-lg-4 programHolder">
+							<div class="col-xs-12 col-lg-4 programHolder">
 								<div class="row">
 								</div>
 								Dhyan Shuddhi Meditation
@@ -588,7 +590,7 @@
 									<div class="col-xs-2 col-lg-4"></div>
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-4 programHolder">
+							<div class="col-xs-12 col-lg-4 programHolder">
 								Poornima Shanti
 								<div class="row programShortDescription">
 									Full Moon meditation to draw enhanced energies from the Masters through group activity.
@@ -599,7 +601,7 @@
 									<div class="col-xs-2 col-lg-4"></div>
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-4 programHolder">
+							<div class="col-xs-12 col-lg-4 programHolder">
 								Group Chanting
 								<div class="row programShortDescription">
 									Powerful mantras given by Mahavatar Babaji chanted in groups for enhanced energetic effect
