--- a/index.html
+++ b/index.html
@@ -618,35 +618,32 @@
 				</div>
 			</div>
 			<div class="row footer">
-				<div class="col-xs-2"></div>
-				<div class="col-xs-8">
+				<div class="col-xs-2 col-lg-2"></div>
+				<div class="col-xs-8 col-lg-8">
 					<div class="row footerRow1">
-						<div class="col-xs-12 col-md-3 col-lg-3 columnFooterInfo">
-							<div class="columnFooterInfoText">
-								<img src="images/footer_logo.png" class="footerLogo">
-							</div>
+						<div class="col-xs-5 col-lg-5"></div>
+						<div class="col-xs-2 col-lg-2 footerLogo">
+							<img src="images/footer_logo.png">
 						</div>
-						<div class="col-xs-12 col-lg-3 columnFooterInfo">
-							<div class="columnFooterInfoText">
+					</div>
+					<div class="row">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							<div class="col-xs-4 col-lg-3 columnFooterInfoText">
 								<div>
 									<span class="glyphicon glyphicon-earphone"><span class="footerText">+91 9999999999</span></span>
-
-									</div>
+								</div>
 							</div>
-						</div>
-						<div class="col-xs-12 col-lg-3 columnFooterInfo">
-							<div class="columnFooterInfoText">
+							<div class="col-xs-4 col-lg-5 columnFooterInfoText">
 								<div>
 									<span class="glyphicon glyphicon-envelope"><span class="footerText">babajitadekam@gmail.com</span></span>
 								</div>
 							</div>
-						</div>
-						<div class="col-xs-12 col-lg-3 columnFooterInfo">
-								<div class="columnFooterInfoText">
-									<div>
-										<span class="footerText">Follow Us<span class="fa fa-facebook-official"></span><span class="fa fa-youtube-play"></span><span class="fa fa-instagram"></span></span>
-									</div>
+							<div class="col-xs-4 col-lg-3 columnFooterInfoText">
+								<div>
+									<span class="footerText">Follow Us<span class="fa fa-facebook-official"></span><span class="fa fa-youtube-play"></span><span class="fa fa-instagram"></span></span>
 								</div>
+							</div>
 						</div>
 					</div>
 					<div class="row footerRow2">
@@ -659,7 +656,7 @@
 						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="HomeMenuFooter" onclick="menuSelected(event,this.id)">Books</div>
 					</div>
 				</div>
-				<div class="col-xs-2"></div>
+				<div class="col-xs-2 col-lg-2"></div>
 			</div>
 			<div class="row footerBand">
 				Copyright 2018. All Rights Reserved with Tadekam.com
