--- a/Tadekam.html
+++ b/Tadekam.html
@@ -304,7 +304,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-xs-12 col-lg-4 homeTadekamForYouStones">
+							<div class="col-xs-12 col-lg-4 homeTadekamForYouStones hideForMobile">
 								<img src="images/stones.png" alt="Stones" class="homeTadekamForYouStonesImage">
 							</div>
 						</div>
@@ -462,16 +462,16 @@
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="row textRow visibleRow collapsedRow">
+					<div class="row textRow collapsedRow collapse" id="JourneySoFarCollapsibleRow">
 						<div class="col-xs-2 col-lg-2"></div>
 						<div class="col-xs-8 col-lg-8">
-							Second Row For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+							Second Row...For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
 					<div class="row collapsibleArrowHolder">
 						<div class="col-xs-5 col-lg-5"></div>
-						<div class="col-xs-2 col-lg-2 collapsibleArrow" onclick="toggleCollapsibleContent('JourneySoFar')">
+						<div class="col-xs-2 col-lg-2 collapsibleArrow" onclick="toggleCollapsibleContent('JourneySoFar')" data-toggle="collapse" data-target="#JourneySoFarCollapsibleRow">
 							<span class="glyphicon glyphicon-chevron-down"></span>
 							<div class="row">
 								<div class="col-xs-12 col-lg-12">
@@ -479,7 +479,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xs-2 col-lg-2 collapsibleArrow hideCollapsibleArrow" onclick="toggleCollapsibleContent('JourneySoFar')">
+						<div class="col-xs-2 col-lg-2 collapsibleArrow hideCollapsibleArrow" onclick="toggleCollapsibleContent('JourneySoFar')" data-toggle="collapse" data-target="#JourneySoFarCollapsibleRow">
 							<span class="glyphicon glyphicon-chevron-up"></span>
 							<div class="row">
 								<div class="col-xs-12 col-lg-12">
