--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 						<div class="row textRow">
 							<div class="col-xs-2 col-lg-2"></div>
 							<div class="col-xs-8 col-lg-8">
-								<a href="#OurFounderAboutTadekam" id="AboutTadekamMenu" onclick="menuSelected(event,this.id)">Read More</a>
+								<a href="#OurFounderAboutTadekam" id="AboutTadekamMenuFooter" onclick="menuSelected(event,this.id)">Read More</a>
 							</div>
 							<div class="col-xs-2 col-lg-2"></div>
 						</div>
@@ -462,12 +462,21 @@
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="row textRow collapsedRow collapse" id="JourneySoFarCollapsibleRow">
-						<div class="col-xs-2 col-lg-2"></div>
-						<div class="col-xs-8 col-lg-8">
-							Second Row...For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+					<div class="row collapsedRow collapse" id="JourneySoFarCollapsibleRow">
+						<div class="row textRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								Second Row...For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
 						</div>
-						<div class="col-xs-2 col-lg-2"></div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								Third Row...For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
 					</div>
 					<div class="row collapsibleArrowHolder">
 						<div class="col-xs-5 col-lg-5"></div>
