--- a/index.html
+++ b/index.html
@@ -565,12 +565,13 @@
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
-				<div class="row">
+				<div class="row programsContainer">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
-						<div class="row">
+						<div class="row programsContainerRow">
 							<div class="col-xs-12 col-lg-4 programHolder">
 								<div class="row">
+									<img src="images/home_spiritual_programs.png" alt=""/>
 								</div>
 								InConnect Workshop
 								<div class="row programShortDescription">
@@ -583,6 +584,9 @@
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-4 programHolder">
+								<div class="row">
+									<img src="images/home_spiritual_programs.png" alt=""/>
+								</div>
 								Breaking Boundaries
 								<div class="row programShortDescription">
 									These two days courses having three levels have been carefully crafted, to unleash the spiritual potential and power that lies within every human beings and break free of physical and mental limitations.
@@ -594,6 +598,9 @@
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-4 programHolder">
+								<div class="row">
+									<img src="images/home_spiritual_programs.png" alt=""/>
+								</div>
 								Tadekam Kriyas
 								<div class="row">(Basic and Advance)</div>
 								<div class="row programShortDescription">
@@ -609,12 +616,13 @@
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
-				<div class="row">
+				<div class="row programsContainer">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
-						<div class="row">
+						<div class="row programsContainerRow">
 							<div class="col-xs-12 col-lg-4 programHolder">
 								<div class="row">
+									<img src="images/home_spiritual_programs.png" alt=""/>
 								</div>
 								Dhyan Shuddhi Meditation
 								<div class="row programShortDescription">
@@ -627,6 +635,9 @@
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-4 programHolder">
+								<div class="row">
+									<img src="images/home_spiritual_programs.png" alt=""/>
+								</div>
 								Poornima Shanti
 								<div class="row programShortDescription">
 									Full Moon meditation to draw enhanced energies from the Masters through group activity.
@@ -638,6 +649,9 @@
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-4 programHolder">
+								<div class="row">
+									<img src="images/home_spiritual_programs.png" alt=""/>
+								</div>
 								Group Chanting
 								<div class="row programShortDescription">
 									Powerful mantras given by Mahavatar Babaji chanted in groups for enhanced energetic effect
@@ -651,6 +665,232 @@
 						</div>
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row programsForChildren">
+					<div class="col-xs-12 col-lg-12">
+						<div class="row headerOfContentRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8 titleContentHeader">
+								Programs for Children
+								<div class="row">
+									<div class="col-xs-5 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-2">
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-5 col-lg-5"></div>
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row programsForChildrenRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								An early introduction to self-empowerment and tapping into the spiritual quotient of the new age children.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row programsForChildrenRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								<div class="col-xs-2 col-lg-4">
+									<div class="row">
+										<img src="images/home_programs_for_children.png" alt=""/>
+									</div>
+									Fun Connect
+									<div class="row programShortDescription">
+										4 Years to 7 Years
+									</div>
+								</div>
+								<div class="col-xs-2 col-lg-4">
+									<div class="row">
+										<img src="images/home_programs_for_children.png" alt=""/>
+									</div>
+									Mind Connect
+									<div class="row programShortDescription">
+										8 Years to 10 Years
+									</div>
+								</div>
+								<div class="col-xs-2 col-lg-4">
+									<div class="row">
+										<img src="images/home_programs_for_children.png" alt=""/>
+									</div>
+									Soul Connect
+									<div class="row programShortDescription">
+										11 Years to 14 Years
+									</div>
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+					</div>
+				</div>
+				<div class="row programsLiveSmartSeminars">
+					<div class="row headerOfContentRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8 titleContentHeader">
+							Live Smart Seminars
+							<div class="row">
+								<div class="col-xs-5 col-lg-5"></div>
+								<div class="col-xs-2 col-lg-2">
+									<div class="row">
+										<div class="col-xs-2 col-lg-4"></div>
+										<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+										<div class="col-xs-2 col-lg-4"></div>
+									</div>
+								</div>
+								<div class="col-xs-5 col-lg-5"></div>
+							</div>
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
+					</div>
+					<div class="row">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							<div class="row">
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- Gender Wise -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										Seminar on improving relationships
+									</div>
+								</div>
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- Dealing with Sexual Harassment -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										Learn to deal with Sexual harassment at workplace or various other social forums
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- The Game Changers -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										Understanding children born after 2000 AD
+									</div>
+								</div>
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- Marriage or Mirage -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										A new age concept of equal partnership in a marriage or within a household
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- You Cant Cheat Destiny -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										Learn to make better decisions
+									</div>
+								</div>
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- Anger Management and Response System -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										A dynamic seminar on the ways in which you can understand and deal with your anger
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- To Be Or Not Be Spiritual -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										Striking a perfect balance between the material and spiritual aspects of human existence
+									</div>
+								</div>
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- Get A Life -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										Learn how to strike a work-life balance
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- Passion With A Purpose -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										Learn to have a passion with a purpose
+									</div>
+								</div>
+								<div class="col-xs-6 col-lg-6">
+									<div class="liveSmartSeminarHeader">
+										- You In A Mirror -
+									</div>
+									<div class="liveSmartSeminarDescription">
+										A program which would bring an attitudinal change in the way you are perceived by yourself and others
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
+					</div>
+				</div>
+				<div class="row programsByGurujiNaushir">
+					<div class="row headerOfContentRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8 titleContentHeader">
+							Programs By Guruji Naushir
+							<div class="row">
+								<div class="col-xs-5 col-lg-5"></div>
+								<div class="col-xs-2 col-lg-2">
+									<div class="row">
+										<div class="col-xs-2 col-lg-4"></div>
+										<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+										<div class="col-xs-2 col-lg-4"></div>
+									</div>
+								</div>
+								<div class="col-xs-5 col-lg-5"></div>
+							</div>
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
+					</div>
+					<div class="row">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							Beyond Breaking Boundaries
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
+					</div>
+					<div class="row">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							Creative Mantra
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
+					</div>
+					<div class="row">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							Advanced Kriyas
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
+					</div>
+					<div class="row">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							Kundalini SHaktipath
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
+					</div>
 				</div>
 			</div>
 			<div class="row footer">
